# dmcutils

./: .flake8  .gitignore  .travis.yml  Calibrate2013-01-13.py  CalibrateDMC.py  ConvertAVI2hdf5.py  ConvertSolisFits2h5.py  ConvertSpool2h5.m  ConvertSpool2h5.py  CostNeo.m  FileTick.py  LEDcleaner.m  NeoImageJmontage.m  NeoKeogramExtraction.m  NeoMontage.m  NeoPacked12bitToFITS.m  NeoSpoolHeader.m  NeoSpoolPlayer.m  NeoSpoolReader.m  NeoSpoolScanner.m  PlotSpool.py  README.md  README.rst  RunSimulPlayDec202012_X105.m  RunSimulPlayDec202012_X106.m  RunSimulPlayDec202012_X107.m  RunSimulPlayDec202012_X108.m  RunSimulPlayFor2013Jan13.m  Webserver.py  angledist.m  calibrate2013-01-13.py  cam_intensity.py  expanduser.m  fitsinfo.m  getRawInd.m  getfitsparam.m  isFitsCheck.m  isoctave.m  live_preview_neospool.py  prcPlot.m  (+15 more)
Events/: Dec202012.m  RunSimulPlay.m  RunSimulPlayDec202012.m  RunSimulPlayDec202012_X109.m  timeMogrify.m
Matlab/: LEDcleaner.m  NeoKeogramExtraction.m  NeoMontage.m  NeoSpoolPlayer.m  getfitsparam.m  parseNeoHeader.m
andor_neo_spool/: QuickCMOSImages.m  README.rst  cornerzero.m  flatdark.m  fn2time.m  readCMOSdata.m  sCMOScreatemovie.m
archive/: NeoImageJmontage.m  QuickCMOSImages.m  cornerzero.m  fiducial.m  flatdark.m  fn2time.m  readCMOSdata.m  sCMOScreatemovie.m
cal/: DMC2015-11.h5
data/: 2013-01-13 tiff frame start time.txt  Info for 2012-12-20ccdSawAurora_FITS.txt  beam_idx.h5  neoParam2013-01-13.txt
dmcutils/: __init__.py  avi2hdf5.py  fitsreadermulti.py  h5imgwriter.py  neospool.py  whichandorfile.py
run2015/: README.rst
(+13 files in other folders)
