[metadata]
name = dmcutils
version = 0.9.3
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = Utilities to read and plot DMC Experiment data
url = https://github.com/space-physics/dmcutils
keywords =
  camera
  aurora
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  pandas
  h5py
  scikit-image
  imageio
  histutils
  morecvutils

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plot =
  matplotlib
io =
  astrometry_azel
web =
  flask
  flask-limiter

[options.entry_points]
console_scripts =
